--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://github.com/basilayyaz/ecommerce>",
+  "homepage": "https://basilayyaz.github.io/ecommerce",
   "devDependencies": {
     "gh-pages": "^6.2.0"
   },
